--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,71 +6,164 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#00BCD4"
+        android:gravity="center"
+        android:paddingTop="30dp"
+        android:paddingBottom="30dp"
+        android:text="Quản lý sinh viên"
+        android:textColor="@color/white"
+        android:textSize="25sp" />
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp">
 
-        <EditText
-            android:id="@+id/edt_timkiem"
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_weight="2" />
+            android:layout_height="wrap_content"
+            android:layout_weight="2">
+
+            <EditText
+                android:id="@+id/edt_timkiem"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:hint="Tìm kiếm" />
+        </androidx.cardview.widget.CardView>
+
 
         <Button
             android:id="@+id/btn_timkiem"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_weight="8"
-            android:text="Tìm" />
+            android:background="#8BC34A"
+            android:text="Tìm"
+            android:textColor="@color/white" />
     </LinearLayout>
 
-
-    <EditText
-        android:id="@+id/edt_hoten"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Họ tên" />
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp">
 
-    <EditText
-        android:id="@+id/edt_diachi"
+        <EditText
+            android:id="@+id/edt_masv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Mã sinh viên" />
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Địa chỉ" />
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp">
 
-    <EditText
-        android:id="@+id/edt_lop"
+        <EditText
+            android:id="@+id/edt_hoten"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Họ tên" />
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Lớp" />
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp">
 
-    <EditText
-        android:id="@+id/edt_ngaysinh"
+        <EditText
+            android:id="@+id/edt_lop"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Lớp" />
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Ngày sinh"
-        android:inputType="date" />
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Giới tính"
+            android:textSize="20sp" />
+
+        <RadioGroup
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="25dp"
+            android:orientation="horizontal">
+
+            <RadioButton
+                android:id="@+id/rd_nam"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Nam" />
+
+            <RadioButton
+                android:id="@+id/rd_nu"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Nữ" />
+        </RadioGroup>
+    </androidx.cardview.widget.CardView>
+
 
     <Button
         android:id="@+id/btn_them"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Thêm" />
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="10dp"
+        android:background="#FF5722"
+        android:text="Thêm"
+        android:textColor="@color/white" />
 
     <Button
         android:id="@+id/btn_capnhat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Cập nhật" />
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:background="#4CAF50"
+        android:text="Cập nhật"
+        android:textColor="@color/white" />
 
     <Button
         android:id="@+id/btn_xoa"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Xóa" />
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:background="#F44336"
+        android:text="Xóa"
+        android:textColor="@color/white" />
 
-    <ListView
-        android:id="@+id/lv_sinhvien"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="400dp" />
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp">
+
+        <ListView
+            android:id="@+id/lv_sinhvien"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
