--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#00BCD4"
+        android:background="#2196F3"
         android:gravity="center"
         android:paddingTop="30dp"
         android:paddingBottom="30dp"
@@ -121,8 +121,12 @@
         </RadioGroup>
     </androidx.cardview.widget.CardView>
 
-
+<LinearLayout
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
     <Button
+        android:layout_weight="1"
         android:id="@+id/btn_them"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -134,6 +138,7 @@
         android:textColor="@color/white" />
 
     <Button
+        android:layout_weight="1"
         android:id="@+id/btn_capnhat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -144,6 +149,7 @@
         android:textColor="@color/white" />
 
     <Button
+        android:layout_weight="1"
         android:id="@+id/btn_xoa"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -152,6 +158,8 @@
         android:background="#F44336"
         android:text="Xóa"
         android:textColor="@color/white" />
+</LinearLayout>
+
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
